editing angular.json file

--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "AngularBasics": {
+    "AngularShoppingProject": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -65,10 +65,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "AngularBasics:build:production"
+              "browserTarget": "AngularShoppingProject:build:production"
             },
             "development": {
-              "browserTarget": "AngularBasics:build:development"
+              "browserTarget": "AngularShoppingProject:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -76,7 +76,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "AngularBasics:build"
+            "browserTarget": "AngularShoppingProject:build"
           }
         },
         "test": {
